# llm-orchestration-platform

./: .env.example  .gitignore  Create  README.md  _bench_server.py  benchmark_local.py  docker-compose.dev.yml  docker-compose.prod.yml  look  prometheus-config.yml  pyproject.toml  user-data.sh
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  documentation.yml  performance-test.yml  security-scan.yml
aws/: Dockerfile.production  cloudwatch-dashboard.json  deploy-production.sh  main.tf  monitor-performance.py  sla-monitoring.py  terraform-autoscaling-monitoring.tf  terraform-infrastructure.tf  terraform-outputs.tf  terraform-production-enhanced.tf  terraform-security-iam.tf  terraform.tfvars.example  terraform.tfvars.production  variables.tf
django-service/: Dockerfile  Dockerfile.dev
django-service/core/: settings.py  (+2 more)
django_service/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.production  docker-compose.yml
fastapi_service/: Dockerfile  Dockerfile.dev  Dockerfile.optimized  Dockerfile.production  metrics.py  metrics_main.py  optimized_main.py  simple_main.py  simple_optimized.py  working_main.py
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
graph-service/: Dockerfile
helm-chart/: Chart.yaml  README.md  values-prod.yaml  values.yaml
kubernetes/: kustomization.yaml
llm-api-platform/: .env.example  Makefile  docker-compose.prod.yml  docker-compose.yml
monitoring-service/: docker-compose.monitoring.yml  main.py
nginx/: dev.conf  nginx-optimized.conf  nginx.conf  simple-loadbalancer.conf
scripts/: backup.sh  debug-both.py  demo-deployment.sh  deploy-production.sh  deploy-to-aws.sh  deploy.sh  dev-helpers.sh  health-check.sh  init-db.sql  load-test.sh  optimize-database.sql  redis-optimization.conf  reset-db.sh  restore.sh  rollback.sh  setup-dev.sh
security-service/: config.py  main.py
training-serivce/: Dockerfile
(+305 files in other folders)
