[project]
name = "local"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
gensim = "4.2.0"
spacy = "3.6.1"
networkx = "<3.3"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-prometheus (>=2.4.0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "shared (>=0.0.32,<0.0.33)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "app (>=0.0.1,<0.0.2)",
    "app-config (>=2.0.1,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-louvain (>=0.16,<0.17)",
    "pinecone (>=7.3.0,<8.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "poetry (>=2.1.3,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "timm (>=1.0.17,<2.0.0)",
    "claude-code-sdk (>=0.0.17,<0.0.18)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
